2004-04-09  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs: closing per bug #55955.

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* Gui/Components/SdStatusBar.cs: Add pulsing.

2004-04-09  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Services/Tasks/Task.cs: don't show "()" when error.ErrorNumber is 
	empty

2004-04-07  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/CommonAboutDialog.cs:
	* Gui/Dialogs/SharpDevelopAboutPanels.cs: rearrange the copyright, 
	license, sponsorship, and version information.  Add back info about    
	SharpDevelop and AlphaSierraPapa
	* Gui/Dialogs/TipOfTheDay.cs: remove IDisposable and call Hide and 
	Dispose instead of Destroy on the window, remove some unneccesary 
	public things
	* Commands/HelpCommand.cs: revert addition of using () {} to 
	tipoftheday
	* Gui/Workbench/DefaultWorkbench.cs: uncomment memento restoring code

2004-04-07  Todd Berman  <tberman@sevenl.net>

	* Commands/ProjectBrowserCommands/FolderNodeCommands: Incorporate bug
	fix for bug #56275 based on a patch from eddie tejeda
	<eddie AT nailchipper DOT com>. Also fix an exception that could
	occur when the file already exists in the target directory.

2004-04-07  Nick Drochak  <ndrochak@gol.com>

	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs: Before the actual edit
	have node un-munge the text it wraps around the combine name.
	* Gui/Pads/ProjectBrowser/BrowserNode/CombineBrowserNode.cs: Re-munge
	name with number of entries after the combine name changes.

2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Commands/FileCommands.cs: Combine the open solution/file into one
	open... command
	* Gui/Pads/FileScout.cs: add .ToUpper () to catch .pRjx, etc.

2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Commands/MenuItemBuilders.cs: change to use alt instead of control
	for a more 'gnomey' feel.

2004-04-06  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: update the menu
	after a context switch.