@@ -13,7 +13,6 @@ namespace MonoDevelop.Gui.Pads
 	public class TerminalPad : IPadContent
 	{
 		Frame frame = new Frame ();
-		VScrollbar vscroll;
 		Terminal term;
 
 		ResourceService resourceService = (ResourceService) ServiceManager.Services.GetService(typeof(IResourceService));
@@ -30,7 +29,7 @@ namespace MonoDevelop.Gui.Pads
 		public string Title {
 			get {
 				//FIXME: check the string
-				return GettextCatalog.GetString ("Output");
+				return GettextCatalog.GetString ("Terminal");
 			}
 		}
 		
@@ -57,7 +56,7 @@ namespace MonoDevelop.Gui.Pads
 			term.ScrollOnKeystroke = true;
 			term.CursorBlinks = true;
 			term.MouseAutohide = true;
-			term.FontFromString = "monospace 12";
+			term.FontFromString = "monospace 10";
 			term.Encoding = "UTF-8";
 			term.BackspaceBinding = TerminalEraseBinding.Auto;
 			term.DeleteBinding = TerminalEraseBinding.Auto;
@@ -69,23 +68,25 @@ namespace MonoDevelop.Gui.Pads
 			colormap.AllocColor (ref fgcolor, true, true);
 			colormap.AllocColor (ref bgcolor, true, true);
 			term.SetColors (fgcolor, bgcolor, fgcolor, 16);
-			term.SetSize (50, 5);
 
-			term.Commit += new Vte.CommitHandler (OnTermCommit);
-			term.RestoreWindow += new EventHandler (OnRestoreWindow);
+			//FIXME: whats a good default here
+			//term.SetSize (80, 5);
+
+			// FIXME: pass the environment along
+			term.ForkCommand (Environment.GetEnvironmentVariable ("SHELL"), Environment.GetCommandLineArgs (), new string[] {""}, Environment.GetEnvironmentVariable ("HOME"), false, true, true);
+
 			term.ChildExited += new EventHandler (OnChildExited);
-			term.LowerWindow += new EventHandler (OnTermLower);
-			term.RaiseWindow += new EventHandler (OnTermRaise);
-//			term.TextModified += new EventHandler (OnTermTextModified);
 
-			vscroll = new VScrollbar (term.Adjustment);
+			VScrollbar vscroll = new VScrollbar (term.Adjustment);
 
 			HBox hbox = new HBox ();
 			hbox.PackStart (term, true, true, 0);
 			hbox.PackStart (vscroll, false, true, 0);
 
 			frame.ShadowType = Gtk.ShadowType.In;
-			frame.Add (hbox);
+			ScrolledWindow sw = new ScrolledWindow ();
+			sw.Add (hbox);
+			frame.Add (sw);
 			
 			taskService.CompilerOutputChanged += new EventHandler (SetOutput);
 			projectService.StartBuild += new EventHandler (SelectMessageView);
@@ -93,53 +94,20 @@ namespace MonoDevelop.Gui.Pads
 			projectService.CombineOpened += new CombineEventHandler (OnCombineOpen);
 		}
 
-/*
-		void OnTermTextModified (object o, EventArgs args)
-		{
-		}
-*/
 		void OnChildExited (object o, EventArgs args)
 		{
 			// full reset
 			term.Reset (true, true);
 		}
 
-		void OnTermLower (object o, EventArgs args)
-		{
-			Console.WriteLine ("term lower");
-		}
-
-		void OnTermRaise (object o, EventArgs args)
-		{
-			Console.WriteLine ("term raise");
-		}
-
-		void OnRestoreWindow (object o, EventArgs args)
-		{
-			Console.WriteLine ("restore window");
-		}
-
-		void OnTermCommit (object o, Vte.CommitArgs args)
-		{
-			Terminal t = (Terminal) o;
-        	if (args.P0 == "\r")
-        	{
-            	//FIXME: maybe a setting somewhere
-            	t.Feed ("\r\n");
-        	    return;
-    	    }
-                                                                         
-	        t.Feed (args.P0);
-		}
-		
 		void OnCombineOpen (object sender, CombineEventArgs e)
 		{
-			term.Reset (true, true);
+			term.Reset (false, false);
 		}
 		
 		void OnCombineClosed (object sender, CombineEventArgs e)
 		{
-			term.Reset (true, false);
+			term.Reset (false, true);
 		}
 		
 		void SelectMessageView (object sender, EventArgs e)
@@ -154,7 +122,12 @@ namespace MonoDevelop.Gui.Pads
 				}
 			}
 		}
-		
+
+		public void RunCommand (string command)
+		{
+			term.FeedChild (command + "\n");
+		}
+
 		void SetOutput2 ()
 		{
 			term.Feed (taskService.CompilerOutput.Replace ("\n", "\r\n"));
